Fixed overflow on lists

--- a/themes/terminal-custom/assets/css/main.scss
+++ b/themes/terminal-custom/assets/css/main.scss
@@ -175,6 +175,8 @@ pre {
     padding: 0;
     font-size: inherit;
     border: none;
+    white-space: pre-wrap;
+    word-wrap: break-word;
   }
 }
 
